2001-07-12  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-charset-coding-system-alist): Added 'us_ascii'.
	(w3m-w3m-attributes): Use content of w3m-document-charset: field as
	charset	if exists.

2001-07-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-parse-forms): Parse the tags only within the
	"<form ..> ... </form>".

2001-07-12  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-remove-redundant-spaces): Don't cause an error when str
	contains only spaces.

2001-07-12  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* mew-w3m.el: Hand-over of copyright of this file from Goto to
	Tsuchiya. This is consensual.

2001-07-11  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-rendering-region): Add charset option when call
	w3m-form-parse-region().

	* w3m-form.el (w3m-form-parse-region): Add charset option.
	If w3m-type is 'w3mmee or 'w3m-m17n, forms parse within a decoded
	temporally buffer.
	(w3m-form-parse-forms): New function.

2001-07-11  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m-form.el (w3m-form-parse-region): Don't extract value from
	submit button, again.
	(w3m-form-submit): Don't set value when NAME is omitted.

2001-07-11  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-rendering-region): Do not break matching data.

2001-07-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-fontify-forms): Put text properties
	corresponding to form types.
	(w3m-form-input): Simplify.
	(w3m-form-input-password): New function.
	(w3m-form-input-checkbox): Ditto.
	(w3m-form-input-radio): Ditto.
	(w3m-form-input-textarea): Follow changes in `w3m-form-input'.
	(w3m-form-input-select): Ditto.

2001-07-11  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m-form.el (w3m-form-goto-next-field): New function.
	(w3m-form-make-form-urlencoded): Refine to support value of
	check-box type which is list of value string.
	(w3m-form-parse-region): Support CHECKBOX type and RADIO
	type. Note that CHECKBOX type has multiple values.